2016-06-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/libs.m4 (AMANDA_CHECK_LIBCURL): Check for
	  HMAC_CTX_init or HMAC_CTX_reset
	* common-src/glib-util.c, device-src/s3-util.c, device-src/s3.c
	  device-src/s3-util.c: Fix for openssl 1.1

2016-06-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amsamba.pl: Fix for newer samba version

2016-06-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Worker.pm: Abort_setup on input_errors
	* server-src/driver.c: Do not free dp->dataport_list
	* server-src/dumper.c: Improve debugging

2016-05-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amadmin.c (import_db): Fix version parsing
	* server-src/amadmin.c: Fix for level > 9

2016-05-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Xfer.pl: Call config_init()

2016-05-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c: #include "conffile.h"

2016-05-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amxml.c, common-src/file.c: Remove superflous debugging
	  statements

2016-05-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c (do_directtcp_accept): Use dtimeout for the
	  timeout

2016-05-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c (debug_pgets): New function to read a complete
	  line from a FILE*
	* common-src/file.h (debug_pgets, pgets): Add prototypes
	* common-src/amxml.c: Undo previous patch, use pgets instead of agets
	* application-src/amstar.c, client-src/client_util.c,
	  client-src/selfcheck.c, client-src/sendbackup.c,
	  client-src/sendsize.c, common-src/krb5-security.c,
	   common-src/security-util.c,
	  common-src/util.c, recover-src/extract_list.c,
	  server-src/amcheck.c, server-src/amindexd.c,
	  server-src/dumper.c: Use pgets instead of agets to read many files

2016-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>